--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -19,13 +19,13 @@
       body { background-image:
       url('https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
       background-size: cover; background-position: center; background-repeat:
-      no-repeat; height: 100vh; margin: 0; font-family: 'Space Mono', monospace;
+      no-repeat; height: 100vh; margin: 0; 
       color: #FAF3DD; font-size: 15px; } .container { height: 100vh; display:
       flex; align-items: center; justify-content: center; } .card {
       background-color: #070600; border-radius: 8px; box-shadow: 0 0 10px
       rgba(247, 243, 227, 0.3); } .welcome-message { text-align: center;
       font-size: 30px; margin-bottom: 20px; color: #FAF3DD; text-shadow: 0 0
-      10px rgba(247, 243, 227, 0.5); font-family: 'Space Mono', monospace;
+      10px rgba(247, 243, 227, 0.5);
       font-weight: 700; } label { display: block; margin-bottom: 8px; } input {
       width: 100%; padding: 8px; margin-bottom: 16px; box-sizing: border-box; }
       button { color: #fff; padding: 10px 15px; border: none; border-radius:
@@ -43,7 +43,7 @@
           <p
             style="text-shadow: 0 0 10px rgba(247, 243, 227, 0.8);"
             class="text-center mb-4"
-          >Create an account and join the community.</p>
+          ><i>Create an account and join the community.</i></p>
 
           <form action="/signup" method="post">
             <div
