--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -74,7 +74,7 @@
 {{/if}}
 
 {{#if constellation.social.youtube}}
-  <a href="https://youtube.com/{{constellation.social.youtube}}">YouTube</a>
+  <a href="https://youtube.com/@{{constellation.social.youtube}}">YouTube</a>
 {{/if}}
 
 {{#if constellation.social.tiktok}}
