--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -146,10 +146,10 @@
           </li>
           {{#if logged_in}}
           <li class="nav-item">
-            <a style="color: #FAF3DD;" class="nav-link" href="/profile" {{user.id}}>Profile</a>
+            <a style="color: #FAF3DD;" class="nav-link" href="/profile/"{{constellations.id}}>Profile</a>
           </li>
           <li class="nav-item">
-            <a style="color: #FAF3DD;" class="nav-link" id="logout" href="/logout">Logout</a>
+            <a style="color: #FAF3DD;" class="nav-link" id="loguo" href="/logout">Logout</a>
           </li>
           {{else}}
           <li class="nav-item">
