--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,95 +1,96 @@
-
-
-
-
-
-
-
-{{#if loading}}
-  <div class="spinner-border" role="status">
-    <span class="sr-only">Loading...</span>
-  </div>
+{{!-- {{#if loading}}
+<div class="spinner-border" role="status">
+  <span class="sr-only">Loading...</span>
+</div>
 {{else}}
-  {{#if session.logged_in}}
-    <div class="profile-container">
-      <h2>Hello, {{username}}!</h2>
+{{#if session.logged_in}}
+<div class="profile-container">
+  <h2>Hello, {{username}}!</h2>
 
-      <section class="profile-info">
-        
-        <h3>{{username}}</h3>
-        
-        
-        <div class="media">
-          <img src="{{profilePicture}}" class="mr-3" alt="Profile Picture">
-          <div class="media-body">
-            <h5 class="mt-0">Profile Picture</h5>
-            <p>Upload or change your profile picture</p>
-            
-          </div>
-        </div>
-      </section>
+  <section class="profile-info">
 
-      <section class="status-section">
-        
-        <form id="statusForm" action="/api/status" method="POST">
-          <div class="form-group">
-            <label for="status">Post your status:</label>
-            <textarea class="form-control" id="status" name="status" rows="3" required></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Post Status</button>
-        </form>
+    <h3>{{username}}</h3>
 
-        
-        <h3>Your Statuses:</h3>
-        <ul>
-          {{#each statuses}}
-            <li>
-              <p>{{status}}</p>
-              
-            </li>
-          {{/each}}
-        </ul>
-      </section>
+
+    <div class="media">
+      <img src="{{profilePicture}}" class="mr-3" alt="Profile Picture">
+      <div class="media-body">
+        <h5 class="mt-0">Profile Picture</h5>
+        <p>Upload or change your profile picture</p>
+
+      </div>
     </div>
-  {{else}}
-    <h2>Welcome to Constellation</h2>
-    <p>Explore the constellations created by our community. Sign up to create your own!</p>
-    <a href="/signup">Sign Up</a>
-    <a href="/login">Login</a>
-  {{/if}}
+  </section>
+
+  <section class="status-section">
+
+    <form id="statusForm" action="/api/status" method="POST">
+      <div class="form-group">
+        <label for="status">Post your status:</label>
+        <textarea class="form-control" id="status" name="status" rows="3" required></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Post Status</button>
+    </form>
+
+    <h3>Your Statuses:</h3>
+    <ul>
+      {{#each statuses}}
+      <li>
+        <p>{{status}}</p>
+
+      </li>
+      {{/each}}
+    </ul>
+  </section>
+</div>
+{{else}}
+
 {{/if}}
+{{/if}} --}}
+
+{{!-- -------------------------------------------------------------------------------------------------- --}}
 
 
-
-
-<h1>{{constellation.username}}'s Constellation</h1>
+<div class="profile-username d-flex justify-content-center">
+  <h1 class="text-center">{{constellation.username}}'s Constellation</h1>
+</div>
 
 <br />
 <br />
 <br />
 
+<div class="socials-container d-flex flex-column justify-content-center text-center m-2">
 {{#if constellation.social.twitter}}
-  <a href="https://twitter.com/{{constellation.social.twitter}}">Twitter</a>
+<a href="https://twitter.com/{{constellation.social.twitter}}">Twitter</a>
 {{/if}}
 
+<div class="mb-3">
 {{#if constellation.social.instagram}}
-  <a
-    href="https://instagram.com/{{constellation.social.instagram}}"
-  >Instagram</a>
+<a href="https://instagram.com/{{constellation.social.instagram}}">Instagram</a>
 {{/if}}
+</div>
 
+<div class="mb-3">
 {{#if constellation.social.github}}
-  <a href="https://github.com/{{constellation.social.github}}">GitHub</a>
+<a href="https://github.com/{{constellation.social.github}}">GitHub</a>
 {{/if}}
+</div>
 
+<div class="mb-3">
 {{#if constellation.social.youtube}}
-  <a href="https://youtube.com/@{{constellation.social.youtube}}">YouTube</a>
+<a href="https://youtube.com/@{{constellation.social.youtube}}">YouTube</a>
 {{/if}}
+</div>
 
+<div class="mb-3">
 {{#if constellation.social.tiktok}}
-  <a href="https://tiktok.com/@{{constellation.social.tiktok}}">TikTok</a>
+<a href="https://tiktok.com/@{{constellation.social.tiktok}}">TikTok</a>
 {{/if}}
+</div>
 
+<div class="mb-3">
 {{#if constellation.social.twitch}}
-  <a href="https://twitch.tv/{{constellation.social.twitch}}">Twitch</a>
+<a href="https://twitch.tv/{{constellation.social.twitch}}">Twitch</a>
 {{/if}}
+</div>
+</div>
